# kodilla_at

./: README.md  first_file.py  module_1_1_palindrome.py  module_1_3_TDD_prime_factors.py  mypy.ini  pytest.ini  requirements.txt  setup.cfg  test_module_1_3_TDD_prime_factors.py  tox.ini
.github/workflows/: ci.yml  python-app.yml
kodilla/module_1/: module_1_3_TDD_prime_factors.py
kodilla/module_2/: module_2_2_integration.py
kodilla/module_2_quiz_app_backend/backend/: .env-test  config.py  flaskr.py  pytest.ini
kodilla/module_2_quiz_app_backend/backend/flaskr/: __init__.py  models.py
kodilla/module_2_quiz_app_backend/backend/flaskr/api/: __init__.py  errors.py  views.py
kodilla/module_2_quiz_app_backend/backend/tests/: base.py  conftest.py  test_api.py
kodilla/module_2_quiz_app_selenium/quiz_app/: .gitignore  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
kodilla/module_2_quiz_app_selenium/quiz_app/home/: admin.py  forms.py  models.py  urls.py  views.py
kodilla/module_2_quiz_app_selenium/quiz_app/home/migrations/: 0001_initial.py
kodilla/module_2_quiz_app_selenium/quiz_app/home/static/home/: main.css
kodilla/module_2_quiz_app_selenium/quiz_app/home/templates/home/: about.html  base.html  create_quiz.html  display_questions.html  home.html  instructor.html  login.html  logout.html  profile.html  (+5 more)
kodilla/module_2_quiz_app_selenium/quiz_app/home/tests/: conftest.py  test_functional.py
kodilla/module_2_quiz_app_selenium/quiz_app/quiz_app/: settings.py  urls.py
tests/: test_module_1_3_TDD_prime_factors.py  test_module_2_2_integration.py
