[metadata]
name = quiz_app
version = 0.0.1
url = https://github.com/tomstano/kodilla_at/tree/main/kodilla/module_2_quiz_app_selenium/quiz_app
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Copyright 2022 - T.Stano
platforms =
    Unix
    Linux
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: Unix
    Operating System :: Linux
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages =
    kodilla/module_2_quiz_app_selenium/quiz_app
python_requires = >= 3.10
install_requires =
    Django==4.0.3
    django-crispy-forms
    pillow
    pytest
    selenium
    tox
    isort

[global]
verbose = 1
